--- a/Kristian/DCW-MediaMasters/style.css
+++ b/Kristian/DCW-MediaMasters/style.css
@@ -1,28 +1,23 @@
 .Header {
-  width: 310px;
+  width: 315px;
   height: 40px;
   background-color: #b8f2ff;
-  padding-top: 5px;
+  padding-top: 13px;
+  padding-left: 5px;
   display: flex;
-  align-items: center;
-  padding-left: 10px;
   justify-content: space-between;
-  text-align: center;
+  align-items: center;
 }
-
-body {
-  display: center;
-  height: 100vh;
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-.clock {
-  font-size: 10px;
-}
-
 .Icons {
-  border-radius: 50%;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.IconTilstand {
+  border-radius: 5px;
+  cursor: pointer;
+  justify-content: left;
+  flex: 1;
 }
 
 .HomeScreen {
@@ -77,8 +72,6 @@ body {
   font-weight: bold;
   padding: 10px 45px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 10px;
   border-radius: 10px;
   cursor: pointer;
@@ -90,8 +83,6 @@ body {
   font-weight: bold;
   padding: 11px 15px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-size: 10px;
   border-radius: 10px;
   cursor: pointer;
