--- a/Kristian/DCW-MediaMasters/style.css
+++ b/Kristian/DCW-MediaMasters/style.css
@@ -1,23 +1,20 @@
 .Header {
-  width: 315px;
+  width: 310px;
   height: 40px;
   background-color: #b8f2ff;
-  padding-top: 13px;
+  padding-top: 10px;
   padding-left: 5px;
+  padding-right: 5px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 .Icons {
-  border-radius: 5px;
   cursor: pointer;
+  border-radius: 10%;
 }
 
 .IconTilstand {
   border-radius: 5px;
-  cursor: pointer;
-  justify-content: left;
-  flex: 1;
 }
 
 .HomeScreen {
@@ -30,7 +27,7 @@
 }
 
 .CommonRegionsLeft {
-  width: 140px;
+  width: 145px;
   height: 170px;
   background-color: #b8f2ff;
   margin: 5px;
@@ -45,7 +42,8 @@
 
 .LeftH2 {
   color: green;
-  font-size: small;
+  font-size: medium;
+  font-weight: bolder;
 }
 
 .LeftH3 {
@@ -53,11 +51,10 @@
 }
 
 .CommonRegionsRight {
-  width: 140px;
+  width: 145px;
   height: 170px;
   background-color: #b8f2ff;
   margin: 5px;
-  padding-right: 10px;
   float: right;
   text-align: center;
 }
