--- a/Camilla/DCW/style.css
+++ b/Camilla/DCW/style.css
@@ -1,34 +1,162 @@
+.mainPage {
+  display: grid;
+  grid-template-columns: 52px 1fr;
+}
+
+body {
+  margin: 0;
+  max-width: 320px;
+  max-height: 240px;
+}
+.header {
+  margin: 0;
+  background-color: #c8d8dd;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  grid-column-start: 2;
+  grid-template-columns: 23px 1fr;
+  width: 100%;
+  height: 23px;
+}
+.mainMenu {
+  background-color: #6cb3cc;
+  margin-left: none;
+  grid-column-start: 1;
+  height: 217px;
+}
+.mainMenu__icons {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 14px;
+}
+.mainMenu__icons--active {
+  background-color: white;
+}
 .loginPage {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 0;
+  grid-template-columns: 59px 1fr 72px;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 268px;
+  height: 217px;
 }
 .loginPage__header {
-  grid-column-start: 2;
-}
-.login__bubbles {
   display: flex;
-  background-color: #d9d9d9;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
+  justify-content: center;
+  grid-column-start: 2;
+  margin: 4px;
+}
+.loginPage__password__bubble {
+  display: flex;
   justify-content: center;
   align-items: flex-end;
-}
-.numpad__numbers {
-  display: flex;
-  background-color: #6cb3cc;
-  border-radius: 50%;
-  width: 25px;
+  background-color: #c8d8dd;
   height: 25px;
-  justify-content: center;
-  align-items: center;
-  grid-column-start: ;
+  width: 25px;
+  border-radius: 50%;
+  margin: 0;
 }
-.login {
-  display: flex;
-}
-.numpad {
+.loginPage__numpad {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-column-start: 2;
+  grid-row-start: 3;
+}
+.loginPage__password {
+  display: flex;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  grid-column: span 3;
+  justify-content: space-evenly;
+}
+.loginPage__numpad__numbers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6cb3cc;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin: 3px;
+}
+.loginPage__numpad__numbers--link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6cb3cc;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin: 3px;
+}
+.loginPage__numpad__numbers--link:visited {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6cb3cc;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin: 3px;
+}
+.loginPage__numpad__numbers:active {
+  background-color: white;
+  outline: 3px solid #6cb3cc;
+  color: grey;
+}
+.loginPage__numpad__numbers:hover {
+  cursor: pointer;
+}
+
+@keyframes progress {
+  0% {
+    --percentage: 0;
+  }
+  100% {
+    --percentage: var(--value);
+  }
+}
+
+@property --percentage {
+  syntax: "<number>";
+  inherits: true;
+  initial-value: 0;
+}
+.progressBar {
+  --percentage: var(--value);
+  --primary: #ffbc10;
+  --secondary: #d9d9d9;
+  --size: 150px;
+  animation: progress 2s 1s forwards;
+  width: var(--size);
+  aspect-ratio: 2/1;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.progressBar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: conic-gradient(
+    from 0.75turn at 50% 100%,
+    var(--primary) calc(var(--percentage) * 1% / 2),
+    var(--secondary) 0
+  );
+  mask: radial-gradient(at 50% 100%, white 55%, transparent 0);
+  mask-mode: alpha;
+  -webkit-mask: radial-gradient(at 50% 100%, #0000 55%, #000 0);
+  -webkit-mask-mode: alpha;
+  overflow: hidden;
+  border-radius: 50% / 100% 100% 0 0;
+}
+.progressBar::after {
+  counter-reset: percentage var(--value);
+  content: counter(percentage) "%";
+  font-size: calc(var(--size) / 5);
 }
