--- a/Camilla/DCW/style.css
+++ b/Camilla/DCW/style.css
@@ -2,6 +2,10 @@
   display: grid;
   grid-template-columns: 52px 1fr;
 }
+.mainPage--maintenance {
+  display: grid;
+  grid-template-columns: 52px 1fr 1fr;
+}
 
 body {
   margin: 0;
@@ -15,18 +19,18 @@ body {
   font-weight: bold;
   display: flex;
   justify-content: center;
-  grid-column-start: 2;
+  grid-column: 2 / span 3;
   grid-template-columns: 23px 1fr;
   width: 100%;
   height: 23px;
 }
 .mainMenu {
-  background-color: #6cb3cc;
-  margin-left: none;
-  grid-column-start: 1;
-  height: 217px;
+  background-color: #5598b2;
+  padding-top: 23px;
+  grid-row: 1 / span 3;
 }
 .mainMenu__icons {
+  background-color: #6cb3cc;
   display: flex;
   flex-wrap: wrap;
   padding: 14px;
@@ -69,6 +73,7 @@ body {
   grid-row-start: 2;
   grid-column: span 3;
   justify-content: space-evenly;
+  margin: 0 60px 0 40px;
 }
 .loginPage__numpad__numbers {
   display: flex;
@@ -123,6 +128,9 @@ body {
   inherits: true;
   initial-value: 0;
 }
+.progressBarSection {
+  grid-column: span 2;
+}
 .progressBar {
   --percentage: var(--value);
   --primary: #ffbc10;
@@ -135,6 +143,7 @@ body {
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  margin-left: 59px;
 }
 .progressBar::before {
   content: "";
@@ -157,6 +166,131 @@ body {
 }
 .progressBar::after {
   counter-reset: percentage var(--value);
-  content: counter(percentage) "%";
-  font-size: calc(var(--size) / 5);
+  content: "399/999";
+  font-size: calc(var(--size) / 7);
+}
+.saltdosering {
+  display: flex;
+  justify-content: center;
+  margin: 1px;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #76dd46;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+input:checked + .slider {
+  background-color: #e42b2b;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #e42b2b;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.toggleSwitchTitle {
+  margin: 0;
+}
+.toggleSwitch {
+  grid-row-start: 3;
+  display: grid;
+  place-items: center;
+}
+.standbyScreen__ok {
+  background-color: #76dd46;
+}
+.standbyScreen__icon {
+  width: 125px;
+  margin-left: 107px;
+  margin-top: 59px;
+}
+.standbyScreen__error {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #e42b2b;
+  width: 320px;
+  height: 240px;
+}
+.standbyScreen__closeIcon {
+  width: 25px;
+  grid-column-start: 3;
+  margin-left: 80px;
+}
+.standbyScreen__errorIcon {
+  width: 67px;
+  grid-column-start: 1;
+  margin: 20px 0 0 20px;
+}
+.standbyScreen__resetAlarm {
+  grid-column-start: 2;
+  text-decoration: none;
+  color: white;
+  border: solid white;
+  border-radius: 20px;
+  border-width: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.standbyScreen__errorMessage {
+  grid-column: span 2;
+  color: white;
+}
+.standbyScreen__warning {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #ffbc10;
+  width: 320px;
+  height: 240px;
+}
+.standbyScreen__warningIcon {
+  width: 67px;
+  grid-column-start: 1;
+  margin: 15px 0 0 20px;
+}
+.standbyScreen__warningMessage {
+  grid-column: span 2;
+  color: white;
+  margin-top: 35px;
+  margin-bottom: 60px;
 }
