--- a/Camilla/DCW/style.css
+++ b/Camilla/DCW/style.css
@@ -25,7 +25,12 @@ body {
   height: 23px;
 }
 .mainMenu {
-  background-color: #5598b2;
+  background: rgb(85, 152, 178);
+  background: linear-gradient(
+    180deg,
+    rgba(85, 152, 178, 1) 48%,
+    rgba(108, 179, 204, 1) 48%
+  );
   padding-top: 23px;
   grid-row: 1 / span 3;
 }
@@ -80,8 +85,8 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #6cb3cc;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   margin: 3px;
 }
@@ -90,8 +95,8 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #6cb3cc;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   margin: 3px;
 }
@@ -100,8 +105,8 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #6cb3cc;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
   margin: 3px;
 }
@@ -136,7 +141,7 @@ body {
   --primary: #ffbc10;
   --secondary: #d9d9d9;
   --size: 150px;
-  animation: progress 2s 1s forwards;
+  animation: progress 2s forwards;
   width: var(--size);
   aspect-ratio: 2/1;
   position: relative;
@@ -235,6 +240,7 @@ input:checked + .slider:before {
   display: grid;
   place-items: center;
 }
+
 .standbyScreen__ok {
   background-color: #76dd46;
 }
@@ -293,4 +299,94 @@ input:checked + .slider:before {
   color: white;
   margin-top: 35px;
   margin-bottom: 60px;
+}
+.alarmHistory {
+  display: flex;
+  flex-flow: column;
+  padding-left: 16px;
+  gap: 0.5rem;
+}
+.alarmHistory__header {
+  font-size: 16px;
+  font-weight: normal;
+  display: grid;
+  place-items: center;
+  margin-bottom: 0;
+}
+.alarmHistory__warnings {
+  background-color: #ebebeb;
+  width: 235px;
+  height: 50px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 26px 1fr;
+}
+.alarmHistory__images {
+  width: 26px;
+  margin-top: 10px;
+  grid-row: span 2;
+  padding-left: 5px;
+}
+.alarmHistory__titel {
+  margin: 0;
+  font-size: 16px;
+  grid-column-start: 2;
+  padding-left: 10px;
+}
+.alarmHistory__date {
+  padding-left: 10px;
+  margin: 0;
+  font-size: 16px;
+  grid-column-start: 2;
+}
+
+.settingsContact__imageFlag {
+  width: 36px;
+  height: 26px;
+}
+.settingsInfo {
+  background-color: #ebebeb;
+  width: 235px;
+  height: 29px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 26px 1fr;
+  margin-left: 16px;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+  text-decoration: none;
+  color: black;
+  gap: 1rem;
+}
+.contact__info {
+  width: 169px;
+  padding-left: 64px;
+  padding-top: 5px;
+}
+.language {
+  background-color: #ebebeb;
+  width: 235px;
+  height: 29px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: 0.75fr 1fr;
+  grid-template-rows: 26px 1fr;
+  text-decoration: none;
+  color: black;
+  margin-left: 16px;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+.languageImages {
+  width: 23px;
+  height: 26px;
+  margin-left: 16px;
+}
+.standby {
+  position: absolute;
+  z-index: 1;
+  display: none;
+}
+.standby--active {
+  display: grid;
 }
