--- a/Michaela/dcw_redesign/style.css
+++ b/Michaela/dcw_redesign/style.css
@@ -80,6 +80,7 @@
     background-color: #F24848;
     -webkit-transition: .4s;
     transition: .4s;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
   }
  
   .slider:before {
@@ -133,12 +134,12 @@ input + .slider:before {
   .toggle{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 41px;
-    margin-bottom: 42px;
+    margin-top: 38px;
+    margin-bottom: 38px;
   }
 
 
-  .navbar{
+.navbar{
     background-color: #60ABF1;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
     bottom: 0;
