--- a/Louise/Blog/style.css
+++ b/Louise/Blog/style.css
@@ -1,3 +1,90 @@
-.authorsection__image{
-    max-width: 150%;
+.header {
+  background-color: transparent;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  width: 500px;
 }
+  .header {
+
+  }
+  .menu__list {
+    display: flex;
+    justify-content: space-around;
+  }
+  .menu__burger {
+    width: 40px;
+  }
+  .menu__link {
+    text-decoration: none;
+    color: black;
+  }
+  .menu ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .menu {
+    width: fit-content;
+    justify-self: end;
+  }
+  .header__title, .header__author {
+    margin-top: 4rem;
+  }
+  .header__title {
+    display: flex;
+    align-items: flex-end;
+  }
+  .header__logo {
+    width: 200px;
+    
+  }
+  .header__video {
+    position: absolute;
+    z-index: -1;
+    max-width: 100%;
+  }
+  .header__author{
+    max-width: 40%;
+   display: flex; 
+   border: solid white;
+  }
+  @media (max-width: 500px) {
+    .menu ul {
+      display: flex;
+      justify-content: flex-end;
+    }
+    .menu {
+      position: relative;
+      z-index: 999;
+    }
+    .menu__burger {
+      display: block;
+      width: 25px;
+    }
+    .menu li {
+      display: inline-block;
+    }
+    .menu__item {
+      color: rgb(0, 0, 0);
+      display: block;
+      padding: 10px 20px;
+    }
+    .menu ul ul {
+      position: absolute;
+      top: 100%;
+      display: none;
+    }
+    .menu ul ul li {
+      display: block;
+    }
+    .menu li:hover ul {
+      display: block;
+    }
+    .menu ul ul li a:hover {
+      background-color: #555;
+    }
+    .menu__list {
+      background: white;
+    }
+  }
+  
