--- a/Camilla/Blog/style.css
+++ b/Camilla/Blog/style.css
@@ -1,9 +1,53 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Covered+By+Your+Grace&family=Jacques+Francois&family=La+Belle+Aurore&display=swap");
+body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.tape {
+  background-color: #dbd8be;
+  width: 100px;
+  height: 50px;
+  position: absolute;
+  border-right: 1px #dbd8be;
+  border-left: 1px #dbd8be;
+  opacity: 0.5;
+  transform: rotate(-50deg);
+}
+.tape--left {
+  right: 13vmin;
+  top: -1vmin;
+}
+.tape--right {
+  right: 13vmin;
+  top: -2vmin;
+  transform: rotate(40deg);
+}
 .menu__burger {
   display: none;
+}
+.frontpagePost {
+  margin: 50px 25px 50px 25px;
+  box-shadow: 5px 10px 27px rgba(0, 0, 0, 0.2);
+  padding: 15px 15px 70px 15px;
+  max-width: 400px;
+  min-width: 100px;
+  text-align: center;
+}
+.frontpagePost__img {
+  max-width: 100%;
+}
+.frontpagePost__header {
+  font-family: "Caveat", cursive;
+  font-family: "Covered By Your Grace", cursive;
+  font-family: "Jacques Francois", serif;
+  font-family: "La Belle Aurore", cursive;
+  font-size: 30px;
+  transform: rotate(2deg);
 }
 .header {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-column: span 3;
 }
 .menu__list {
   display: flex;
@@ -12,6 +56,12 @@
 .menu__link {
   text-decoration: none;
   color: black;
+  font-family: "Caveat", cursive;
+  font-family: "Covered By Your Grace", cursive;
+  font-family: "Jacques Francois", serif;
+  font-family: "La Belle Aurore", cursive;
+  font-weight: bolder;
+  font-size: 20px;
 }
 .menu ul {
   list-style-type: none;
@@ -24,7 +74,77 @@
 .logo {
   width: 200px;
 }
+.post {
+  margin: 50px auto 50px auto;
+  box-shadow: 5px 10px 27px rgba(0, 0, 0, 0.2);
+  padding: 15px 15px 70px 15px;
+  max-width: 400px;
+  min-width: 100px;
+  text-align: center;
+}
+.post__header {
+  font-family: "Caveat", cursive;
+  font-family: "Covered By Your Grace", cursive;
+  font-family: "Jacques Francois", serif;
+  font-family: "La Belle Aurore", cursive;
+  font-size: 30px;
+  transform: rotate(2deg);
+}
+.post__img {
+  max-width: 100%;
+}
+.post__description {
+  grid-column: span 3;
+  margin: auto 20% auto 20%;
+}
+.post--small {
+  max-height: 250px;
+  transform: rotate(5deg);
+}
+.post--rotateLeft {
+  transform: rotate(-5deg);
+}
+.hero {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-end;
+  grid-column: span 3;
+}
+.hero__image {
+  max-width: 100%;
+  grid-column: span 3;
+}
+
+.hero__image--small {
+  width: 300px;
+  border: solid 5px white;
+  position: absolute;
+}
+
+body {
+  margin: 0;
+}
+
+.hero__text {
+  text-align: center;
+  margin: 5px;
+  font-size: 50px;
+  grid-column: span 3;
+  font-family: "Caveat", cursive;
+  font-family: "Covered By Your Grace", cursive;
+  font-family: "Jacques Francois", serif;
+  font-family: "La Belle Aurore", cursive;
+}
 @media (max-width: 500px) {
+  body {
+    display: block;
+  }
+  .post--small {
+    transform: rotate(0);
+  }
+  .post--rotateLeft {
+    transform: rotate(0);
+  }
   .menu ul {
     display: flex;
     justify-content: flex-end;
@@ -61,5 +181,8 @@
   }
   .menu__list {
     background: white;
+    right: 0;
   }
+}
+@media (min-width: 1000px) {
 }
