--- a/Kristian/BlogProjekt - v2/style.css
+++ b/Kristian/BlogProjekt - v2/style.css
@@ -80,8 +80,6 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  z-index: 100;
 }
 
 .header {
@@ -212,7 +210,7 @@ img {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .navbar__menu {
     position: fixed;
     left: -100%;
@@ -270,9 +268,48 @@ img {
   }
 
   .hidden-text {
-    display: none; /* Initially hide the text */
-    margin: 5px; /* Remove the margin */
-    padding: 5px; /* Remove the padding */
+    display: none;
+    margin: 5px;
+    padding: 5px;
+    background-color: #b3cdb6;
+    border-radius: 5px;
+  }
+}
+@media (min-width: 800px) {
+  .expandable-title {
+    cursor: pointer;
+    background-color: #b3cdb6;
+    padding: 15px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 0;
+    column-count: 2;
+    column-gap: 20px;
+  }
+  .expandable-text {
+    cursor: pointer;
+    background-color: #b3cdb6;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .header {
+    background-image: url("images/soenderborg-by-drone-scaled.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+  }
+  .expandable-text {
+    cursor: pointer;
+    background-color: #b3cdb6;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .hidden-text {
+    display: none;
+    margin: 5px;
+    padding: 5px;
     background-color: #b3cdb6;
     border-radius: 5px;
   }
