--- a/Camilla/Blog/style.css
+++ b/Camilla/Blog/style.css
@@ -1,9 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat&family=Covered+By+Your+Grace&family=Jacques+Francois&family=La+Belle+Aurore&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caveat&family=Covered+By+Your+Grace&family=Jacques+Francois&family=La+Belle+Aurore&family=Roboto:wght@100;300&display=swap");
 body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  line-height: 1.7;
+  font-family: font-family: 'Caveat', cursive;
+  font-family: 'Covered By Your Grace', cursive;
+  font-family: 'Jacques Francois', serif;
+  font-family: 'La Belle Aurore', cursive;
+  font-family: 'Roboto', sans-serif;;
 }
 .tape {
+  box-shadow: 5px 10px 27px rgba(0, 0, 0, 0.1);
   background-color: #dbd8be;
   width: 100px;
   height: 50px;
@@ -15,11 +23,11 @@ body {
 }
 .tape--left {
   right: 13vmin;
-  top: -1vmin;
+  top: -3vmin;
 }
 .tape--right {
   right: 13vmin;
-  top: -2vmin;
+  top: -3vmin;
   transform: rotate(40deg);
 }
 .menu__burger {
@@ -95,7 +103,7 @@ body {
 }
 .post__description {
   grid-column: span 3;
-  margin: auto 20% auto 20%;
+  margin: auto 20% 50px 20%;
 }
 .post--small {
   max-height: 250px;
@@ -134,6 +142,110 @@ body {
   font-family: "Covered By Your Grace", cursive;
   font-family: "Jacques Francois", serif;
   font-family: "La Belle Aurore", cursive;
+}
+#i1,
+#i2,
+#i3 {
+  display: none;
+}
+.imageSlider {
+  max-width: 100%;
+  height: 500px;
+}
+.imageSlider__item {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-height: 520px;
+  display: grid;
+}
+.imageSlider__item img {
+  background-color: white;
+  max-width: 100%;
+  margin: auto;
+  display: block;
+}
+.imageSlider__polaroid {
+  box-shadow: 5px 10px 27px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  width: 25%;
+  height: 30%;
+  padding: 10px 10px 120px 10px;
+  justify-self: center;
+  font-family: "Caveat", cursive;
+  font-family: "Covered By Your Grace", cursive;
+  font-family: "Jacques Francois", serif;
+  font-family: "La Belle Aurore", cursive;
+  text-align: center;
+  min-width: 200px;
+}
+.imageSlider #nav_slide {
+  display: block;
+  margin-top: 320px;
+  width: 100%;
+  height: 11px;
+  position: absolute;
+  text-align: center;
+  z-index: 99;
+  cursor: default;
+}
+#nav_slide .dots {
+  top: -5px;
+  width: 18px;
+  height: 18px;
+  margin: 0 4px;
+  position: relative;
+  border-radius: 100%;
+  display: inline-block;
+  background-color: rgba(90, 89, 89, 0.6);
+  transition: 0.4s;
+}
+#nav_slide .dots:hover {
+  cursor: pointer;
+  background-color: black;
+  transition: 0.25s;
+}
+.imageSlider__item {
+  z-index: -1;
+}
+
+#i1:checked ~ #one,
+#i2:checked ~ #two,
+#i3:checked ~ #three {
+  z-index: 9;
+  animation: scroll 1s ease-in-out;
+}
+
+#i1:checked ~ #nav_slide #dot1,
+#i2:checked ~ #nav_slide #dot2,
+#i3:checked ~ #nav_slide #dot3 {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+.footer {
+  grid-column: span 3;
+}
+.footer__icon {
+  width: 50px;
+}
+.footer_copyright{
+  text-align: center;
+}
+.footer__social{
+  display: flex;
+  justify-content: center;
+}
+.footer__description{
+  text-align: center;
+  font-style: italic;
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 @media (max-width: 500px) {
   body {
@@ -183,6 +295,4 @@ body {
     background: white;
     right: 0;
   }
-}
-@media (min-width: 1000px) {
 }
