--- a/Camilla/Blog/style.css
+++ b/Camilla/Blog/style.css
@@ -215,15 +215,8 @@ body {
     justify-content: center;
     margin: 10px 0 0 0;
   }
-  .footer__social::before{
-    content: "__________________________";
-    color: rgb(45, 45, 80);
-  }
-  .footer__social::after{
-    content: "__________________________";
-    color: rgb(45, 45, 80);
-  }
   .footer__description{
+    display: none;
     text-align: center;
     font-style: italic;
     width: 500px;
@@ -286,6 +279,7 @@ body {
     background: white;
     right: 0;
   }
+  
 }
 @media (min-width:650px){
 
@@ -298,6 +292,17 @@ body {
   font-family: 'Jacques Francois', serif;
   font-family: 'La Belle Aurore', cursive;
   font-family: 'Roboto', sans-serif;;
+}
+.footer__description{
+  display: block;
+}
+.footer__social::before{
+  content: "__________________________";
+  color: rgb(45, 45, 80);
+}
+.footer__social::after{
+  content: "__________________________";
+  color: rgb(45, 45, 80);
 }
 .tape {
   display: block;
@@ -339,5 +344,6 @@ body {
   .hero__image--small{
     max-width: 300px;
   }
+  
 }
 
