--- a/Camilla/Blog/style.css
+++ b/Camilla/Blog/style.css
@@ -19,7 +19,7 @@ h4{
   font-family: "Jacques Francois", serif;
   font-family: "La Belle Aurore", cursive;
   font-weight: bolder;
-  font-size: 30px;
+  font-size: 20px;
   border: none;
   background-color: white;
   cursor: pointer;
@@ -41,8 +41,8 @@ h4{
   width: 250px;
 }
 .frontpagePost {
-  
-  margin: 20px 25px 50px 25px;
+  margin-inline: auto;
+  margin-top: 50px;
   box-shadow: 5px 10px 27px rgba(0, 0, 0, 0.2);
   padding: 15px 15px 70px 15px;
   max-width: 400px;
@@ -231,8 +231,8 @@ body {
     opacity: 1;
   }
 }
-@media (max-width: 650px) {
-  body {
+@media (max-width: 600px) {
+  body{
     display: block;
   }
   .post--small {
@@ -281,11 +281,12 @@ body {
   }
   
 }
-@media (min-width:650px){
+@media (min-width:600px){
 
 body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
   line-height: 1.7;
   font-family: font-family: 'Caveat', cursive;
   font-family: 'Covered By Your Grace', cursive;
@@ -332,6 +333,7 @@ body {
 .footer {
   grid-column: span 3;
 }
+
 }
 @media (min-width:1170px){
   .post--small {
@@ -343,6 +345,9 @@ body {
   }
   .hero__image--small{
     max-width: 300px;
+  }
+  .menu__link{
+    font-size: 30px;
   }
   
 }
