h4 lavet om til p-tags
ingen BEM navngivning, fordi livet er kort og jeg blev doven (shame mig i morgen, jeg går tidligt i seng i dag)

--- a/Camilla/Blog/style.css
+++ b/Camilla/Blog/style.css
@@ -3,7 +3,7 @@
 .tape{
   display: none;
 }
-h4{
+p{
   font-size: 19px;
   line-height: 1.9;
 }
@@ -99,7 +99,7 @@ h4{
   width: 300px;
   border: solid 5px white;
   position: absolute;
-  max-width: 150px;
+  max-width: 90px;
 }
 
 body {
@@ -118,7 +118,7 @@ body {
   font-family: "Covered By Your Grace", cursive;
   font-family: "Jacques Francois", serif;
   font-family: "La Belle Aurore", cursive;}
-  #i1,
+#i1,
 #i2,
 #i3,
 #i4,
@@ -317,21 +317,21 @@ body {
   opacity: 0.5;
   transform: rotate(-50deg);
 }
-.tape--left {
-  right: 13vmin;
-  top: -3vmin;
-}
-.tape--right {
-  right: 13vmin;
-  top: -3vmin;
-  transform: rotate(40deg);
-}
 .menu__burger {
   display: none;
 }
 
 .footer {
   grid-column: span 3;
+}
+.tape--left {
+  right: 105vmin;
+  top: 18vmin;
+}
+.tape--right {
+  right: 10vmin;
+  top: 18vmin;
+  transform: rotate(40deg);
 }
 
 }
@@ -348,6 +348,15 @@ body {
   }
   .menu__link{
     font-size: 30px;
+  }
+  .tape--left {
+    right: 13vmin;
+    top: -3vmin;
+  }
+  .tape--right {
+    right: 13vmin;
+    top: -3vmin;
+    transform: rotate(40deg);
   }
   
 }
